<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference
        android:icon="@drawable/ic_baseline_language_24"
        android:key="@string/locale_key"
        android:title="@string/app_language" />

    <Preference
        android:icon="@drawable/ic_baseline_warning_24"
        android:key="@string/legal_notice_key"
        android:title="@string/legal_notice" />

    <Preference
        android:icon="@drawable/ic_baseline_language_24"
        android:key="@string/benene_count"
        android:title="@string/benene"
        app:summary="@string/benene_des" />

    <Preference
        android:icon="@drawable/ic_baseline_visibility_off_24"
        android:key="@string/spoiler_prevention_key"
        android:summary="@string/spoiler_prevention_summary"
        android:title="@string/spoiler_prevention_title" />

    <Preference
        android:icon="@drawable/ic_refresh"
        android:key="@string/episode_check_frequency_key"
        android:title="@string/episode_check_frequency" />

    <PreferenceCategory android:title="Result Screen Buttons">

        <SwitchPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_baseline_favorite_border_24"
            android:key="@string/show_favorites_key"
            android:summary="@string/show_favorites_summary"
            android:title="@string/show_favorites_title" />

        <SwitchPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_baseline_public_24"
            android:key="@string/show_open_in_browser_key"
            android:summary="@string/show_open_in_browser_summary"
            android:title="@string/show_open_in_browser_title" />

        <SwitchPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_outline_share_24"
            android:key="@string/show_share_key"
            android:summary="@string/show_share_summary"
            android:title="@string/show_share_title" />

        <SwitchPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_baseline_ondemand_video_24"
            android:key="@string/show_cast_key"
            android:summary="@string/show_cast_summary"
            android:title="@string/show_cast_title" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/title_downloads">

        <Preference
            android:icon="@drawable/netflix_download"
            android:key="@string/download_path_key"
            android:title="@string/download_path_pref" />

        <SeekBarPreference
            android:defaultValue="3"
            android:icon="@drawable/arrow_or_edge_24px"
            android:key="@string/download_parallel_key"
            android:max="10"
            android:summary="@string/download_parallel_settings_des"
            android:title="@string/parallel_downloads"
            app:adjustable="true"
            app:min="1"
            app:seekBarIncrement="1"
            app:showSeekBarValue="true" />

        <SeekBarPreference
            android:defaultValue="3"
            android:icon="@drawable/arrow_and_edge_24px"
            android:key="@string/download_concurrent_key"
            android:max="10"
            android:summary="@string/concurrent_connections_settings_des"
            android:title="@string/concurrent_connections"
            app:adjustable="true"
            app:min="1"
            app:seekBarIncrement="1"
            app:showSeekBarValue="true" />

        <Preference
            android:icon="@drawable/ic_baseline_folder_open_24"
            android:key="scan_downloads_key"
            android:title="Scan for Downloads" />

        <Preference
            android:icon="@drawable/ic_battery"
            android:key="@string/battery_optimisation_key"
            android:title="@string/battery_dialog_title" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/download_preferences_title">

        <ListPreference
            android:icon="@drawable/netflix_download"
            android:key="@string/download_quality_pref_key"
            android:title="@string/download_quality_title"
            android:summary="@string/download_quality_summary"
            android:defaultValue="best"
            android:entries="@array/download_quality_entries"
            android:entryValues="@array/download_quality_values" />

        <ListPreference
            android:icon="@drawable/netflix_download"
            android:key="@string/download_audio_pref_key"
            android:title="@string/download_audio_title"
            android:summary="@string/download_audio_summary"
            android:defaultValue="any"
            android:entries="@array/download_audio_entries"
            android:entryValues="@array/download_audio_values" />

    </PreferenceCategory>

    <PreferenceCategory android:title="Auto-Download (Subscribed)">

        <SwitchPreference
            android:icon="@drawable/netflix_download"
            android:key="auto_download_subscribed"
            android:title="@string/auto_download_subscribed_title"
            android:summary="@string/auto_download_subscribed_summary"
            android:defaultValue="false" />

        <Preference
            android:icon="@drawable/ic_baseline_replay_24"
            android:key="subscription_dl_retry_count"
            android:title="@string/download_retry_count_title"
            android:summary="@string/download_retry_count_summary"
            android:dependency="auto_download_subscribed" />

        <ListPreference
            android:icon="@drawable/ic_baseline_language_24"
            android:key="auto_download_network_pref"
            android:title="@string/auto_download_network_title"
            android:summary="@string/auto_download_network_summary"
            android:defaultValue="wifi_only"
            android:entries="@array/auto_download_network_entries"
            android:entryValues="@array/auto_download_network_values"
            android:dependency="auto_download_subscribed" />

    </PreferenceCategory>

    <PreferenceCategory android:title="Library Management">

        <Preference
            android:icon="@drawable/ic_baseline_storage_24"
            android:key="cache_management_key"
            android:title="Cache Management" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_bypass">

        <Preference
            android:icon="@drawable/ic_baseline_add_24"
            android:key="@string/override_site_key"
            android:summary="@string/add_site_summary"
            android:title="@string/add_site_pref" />

        <Preference
            android:icon="@drawable/ic_baseline_dns_24"
            android:key="@string/dns_key"
            android:summary="@string/dns_pref_summary"
            android:title="@string/dns_pref" />

        <SwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_github_logo"
            android:key="@string/jsdelivr_proxy_key"
            android:summary="@string/jsdelivr_proxy_summary"
            android:title="@string/jsdelivr_proxy" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_links">

        <Preference
            android:icon="@drawable/ic_github_logo"
            android:title="@string/github"
            app:summary="https://github.com/AryanMir15/cloudcache">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/AryanMir15/cloudcache" />
        </Preference>

        <Preference
            android:icon="@drawable/quick_novel_icon"
            android:title="@string/lightnovel"
            app:summary="https://github.com/LagradOst/QuickNovel">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/LagradOst/QuickNovel" />
        </Preference>
        <Preference
            android:icon="@drawable/ic_baseline_discord_24"
            android:title="@string/discord"
            app:summary="https://discord.gg/5Hus6fM">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://discord.gg/5Hus6fM" />
        </Preference>
        <Preference
            android:icon="@drawable/baseline_description_24"
            android:title="@string/cs3wiki"
            app:summary="https://cloudstream.miraheze.org/">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://cloudstream.miraheze.org/" />
        </Preference>

    </PreferenceCategory>
</PreferenceScreen>